[package]
name = "makerom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
hyper = { version = "0.14.26", features = ["full"] }
hyper-rustls = { version = "0.24.0", features = ["http1", "http2"] }
tokio = {version = "1.17.0", features = ["full", "tracing"]}
rustls = "0.21.0"

# Logging support
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }

# Utility crates
anyhow = "1"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.16"
once_cell = "1.17.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "3.0.0"
lazy_static = "1.4.0"
async-trait = { version = "0.1.53" }
convert_case = "0.6.0"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "json", "gzip", "multipart"] }
base64 = "0.21.0"
mime = "0.3.17"
bytes = "1.4.0"